--- a/MacGorm/Info.plist
+++ b/MacGorm/Info.plist
@@ -12,15 +12,103 @@
 				<string>gorm</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string></string>
+			<string>GormFile</string>
 			<key>CFBundleTypeName</key>
-			<string>DocumentType</string>
+			<string>GSGormFileType</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.gnustep.gormfile</string>
+			</array>
 			<key>LSTypeIsPackage</key>
 			<integer>1</integer>
 			<key>NSDocumentClass</key>
-			<string>Document</string>
+			<string>GormDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>gmodel</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>FileIcon_gmodel</string>
+			<key>CFBundleTypeName</key>
+			<string>GSGModelFileType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.gnustep.gmodelfile</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+			<key>NSDocumentClass</key>
+			<string>GormDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>nib</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>GormNib</string>
+			<key>CFBundleTypeName</key>
+			<string>GSNibFileType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.interfacebuilder.document</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>1</integer>
+			<key>NSDocumentClass</key>
+			<string>GormDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>xib</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>GormNib</string>
+			<key>CFBundleTypeName</key>
+			<string>GSXibFileType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.apple.interfacebuilder.document.cocoa</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+			<key>NSDocumentClass</key>
+			<string>GormDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>palette</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>GormPalette</string>
+			<key>CFBundleTypeName</key>
+			<string>GSPaletteFileType</string>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>LSHandlerRank</key>
+			<string>None</string>
+			<key>LSTypeIsPackage</key>
+			<true/>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
@@ -42,10 +130,88 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 C.W. Betts. All rights reserved.</string>
+	<string>Copyright © 1999-2015 FSF,  © 2017 C.W. Betts. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Gorm Bundle</string>
+			<key>UTTypeIconFile</key>
+			<string>GormFile</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.gnustep.gormfile</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>gorm</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.text</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>GModel File</string>
+			<key>UTTypeIconFile</key>
+			<string>FileIcon_gmodel</string>
+			<key>UTTypeIdentifier</key>
+			<string>org.gnustep.gmodelfile</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>gmodel</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Apple Nib</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.apple.interfacebuilder.document</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>nib</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.xml</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Apple Xib</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.apple.interfacebuilder.document.cocoa</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>xib</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
