--- a/Palettes/2Controls/Info.plist
+++ b/Palettes/2Controls/Info.plist
@@ -15,12 +15,12 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.1</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 C.W. Betts. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>ControlsPalette</string>
 </dict>
 </plist>
